--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@ Hugo and AsciiDoctor locally or run a Docker image that contains Hugo and AsciiD
 
 ==== Install Hugo and AsciiDoctor locally
 
-If you want to locally install the required tools, you must first install link://https://gohugo.io/[Hugo]
+If you want to locally install the required tools, you must first install link:https://gohugo.io/[Hugo]
 and have the `hugo` command available on your PATH. You should use at least **Hugo 0.48**. You can easily
 install `hugo` by using your system's package manager. Try the following command, which takes a while to
 complete:
